some fixes and changed scrollbar

--- a/src/components/Cases/Cases.component.css
+++ b/src/components/Cases/Cases.component.css
@@ -122,6 +122,12 @@
   box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.6);
 }
 
+.cases__descriptions {
+  max-height: 750px;
+
+  overflow-y: scroll;
+}
+
 .cases__description_wrapper {
   display: flex;
   flex-direction: column;
@@ -141,7 +147,7 @@
   }
 }
 
-@media (max-width: 1050px) and (min-width: 642px)  {
+@media (max-width: 1050px) and (min-width: 642px) {
   .cases {
     all: unset;
 
@@ -154,7 +160,7 @@
 
   .cases__card {
     gap: 1.4vw;
-  
+
     padding: 1.4vw;
   }
 
@@ -175,11 +181,12 @@
   .cases__descriptions {
     display: flex;
     flex-direction: column;
-  
+
     gap: 30px;
-  
+
     min-height: 49.3vw;
-  
+    max-height: none;
+
     padding: 3vh 1.4vw;
   }
 }
@@ -286,7 +293,7 @@
 
   .cases__card {
     gap: 1.4vw;
-  
+
     padding: 1.4vw;
   }
 
@@ -307,11 +314,11 @@
   .cases__descriptions {
     display: flex;
     flex-direction: column;
-  
+
     gap: 30px;
-  
+
     min-height: 49.3vw;
-  
+
     padding: 3vh 1.4vw;
   }
 }
